<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlutoInvest</string>
    <string name="investor_App">Investor</string>
    <string name="action_settings">Settings</string>
    <string name="home_button">Home</string>
    <string name="news_button">News</string>
    <string name="exchange_button">Exchange Rates</string>
    <string name="countries_button">Countries</string>
    <string name="more_button">Comparison</string>
    <string name="other">Other</string>
    <string name="title_activity_interest">InterestActivity</string>
    <string name="interests">Interests</string>
    <string name="title_activity_main_view">MainView</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_metric_selection">MetricSelectionActivity</string>
    <string name="title_activity_country_selection">CountrySelectionActivity</string>
    <string name="title_activity_country_detail">CountryDetailActivity</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="searchHint">Search</string>
    <string name="title_activity_exchange_rates">ExchangeRatesActivity</string>
    <string name="title_activity_comparison">ComparisonActivity</string>
    <string name="title_activity_comparison_country_selection">ComparisonCountrySelectionActivity</string>
    <string name="app_search">Search</string>
    <string name="title_activity_country_comparison_detail">CountryComparisonDetail</string>
    <string name="indicator">Choose an indicator to compare:</string>
    <string name="line_graph">Line Graph</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="compare">Compare selected countries</string>
</resources>
