<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team1_k.project.seg.dataviz.MainViewActivity">
    <item
        android:id="@+id/action_home"
        android:title="@string/home_button"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_News"
        android:title="@string/news_button"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_Markets"
        android:title="@string/market_button"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_Countries"
        android:title="@string/countries_button"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_More"
        android:title="@string/more_button"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:title="@string/app_name"
        android:icon="@android:drawable/ic_search_category_default"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

</menu>
