<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_News"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/news_button"
                android:layout_marginRight="10dp"
                android:textSize="40dp"
                android:onClick="startNewsActivity" />

            <Button
                android:id="@+id/button_Markets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="40dp"
                android:text="@string/market_button" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_Countries"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textSize="40dp"
                android:text="@string/countries_button"
                android:onClick="startCountriesActivity" />

            <Button
                android:id="@+id/button_More"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="40dp"
                android:text="@string/more_button" />

        </LinearLayout>


    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="6"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->

        <!-->-->

        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="100dp"-->
            <!--android:id="@+id/Investor"-->
            <!--android:layout_weight="0.8"-->
            <!--android:background="@drawable/news"-->
            <!--android:layout_margin="10dp"-->
            <!--android:onClick="startNewsActivity" />-->


        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="100dp"-->
            <!--android:id="@+id/Student"-->
            <!--android:layout_weight="0.8"-->
            <!--android:background="@drawable/market"-->
            <!--android:layout_margin="10dp" />-->

        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="100dp"-->
            <!--android:id="@+id/Others"-->
            <!--android:layout_weight="0.8"-->
            <!--android:background="@drawable/world"-->
            <!--android:layout_margin="10dp"-->
            <!--android:onClick="startCountriesActivity" />-->

        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="100dp"-->
            <!--android:id="@+id/admin"-->
            <!--android:layout_weight="0.8"-->
            <!--android:background="@drawable/more"-->
            <!--android:layout_margin="10dp" />-->
    <!--</LinearLayout>-->

</LinearLayout>


